# edge-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  PLAN.md  README.md  bytecode_optimizer.md  deny.toml  netlify.toml  package-lock.json  package.json  spec-coverage.md  vocs.config.ts  vocs.shared.ts
.github/workflows/: audit.yml  ci.yml  release.yml  validate-version.yml
book/: SUMMARY.md  index.html  intro.md  llms-full.txt  llms.txt
book/assets/: abi-BpYCbQpB.js  arrays-jUq2VUOp.js  assignment-CtKB2F2N.js  basics-tKS14jb1.js  branching-1Mx-Sg9_.js  branching-Bm3OpoJR.js  builtins-CFA-Hk3z.js  code-Y4ixAJxv.js  codesize-MioXI5g7.js  comments-DF5CkB7Q.js  constants-BXKED6Hy.js  contact-2rzPF7J_.js  contracts-8n00M_8c.js  contributing-D5kBXsG1.js  erc20-Hcveh0u_.js  events-CEBLjh5-.js  expressions-CVO_zPcR.js  function-VsXhpwfh.js  functions-fWzBBI70.js  generics-DR4UmJHV.js  identifiers-EEgiR1Cq.js  implementation-nIKTxRUs.js  index-B0DkJJZv.js  index-D82uXTeW.js  inline-kjN3-WlX.js  intro-CA2L13Wr.js  literals-BUZf_yrc.js  locations-D4lqGFJM.js  loops-DcCDGwdG.js  modules-BkcfsOmz.js  namespaces-DE3ibjbQ.js  operators-CPVcriZB.js  overview-8hf5Y_l0.js  overview-B1Yd2M3Q.js  overview-B3pv8U5M.js  (+15 more)
crates/ast/: Cargo.toml  README.md
crates/ast/src/: expr.rs  item.rs  lib.rs  lit.rs  op.rs  pattern.rs  stmt.rs  ty.rs
crates/bench/: Cargo.toml
crates/bench/benches/: pipeline.rs
crates/codegen/: Cargo.toml  README.md
crates/codegen/src/: assembler.rs  contract.rs  dispatcher.rs  expr_compiler.rs  gen.rs  lib.rs  opcode.rs  pretty_asm.rs  subroutine_extract.rs
crates/codegen/src/bytecode_opt/: convert.rs  costs.rs  mod.rs  rules.rs  schedule.rs  schema.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/diagnostics/: Cargo.toml  README.md
crates/diagnostics/src/: lib.rs
crates/driver/: Cargo.toml  README.md  build.rs
crates/driver/src/: compiler.rs  config.rs  lib.rs  session.rs  standard_json.rs
crates/driver/tests/: compile_tests.rs  standard_json.rs
crates/driver/tests/golden/: counter_o0.hex  erc20_o0.hex
crates/e2e/: .gas-snapshot  Cargo.toml
crates/e2e/src/: lib.rs
crates/e2e/tests/: access_exec.rs  calldata_args.rs  counter.rs  erc20.rs  examples.rs  expressions.rs  features_exec.rs  finance_exec.rs  generics_exec.rs  generics_negative.rs  main.rs  packed_storage_exec.rs  patterns_exec.rs  tokens_exec.rs  traits_exec.rs  traits_negative.rs  type_demos_exec.rs  types_exec.rs  utils_exec.rs
crates/e2e/tests/suites/: access_exec.rs  bench_vec.rs  calldata_args.rs  counter.rs  erc20.rs  examples.rs  expressions.rs  features_exec.rs  finance_exec.rs  full_math_exec.rs  generics_exec.rs  helpers.rs  inline_asm_exec.rs  inlined_halt_exec.rs  int_widths_exec.rs  internal_fn_types.rs  large_int_literals.rs  map_std_exec.rs  packed_exec.rs  packed_storage_exec.rs  packed_transient_exec.rs  patterns_exec.rs  signed_widths_exec.rs  tokens_exec.rs  traits_exec.rs  type_demos_exec.rs  types_exec.rs  utils_exec.rs  vec_exec.rs  warnings.rs
crates/edgeup-lib/: Cargo.toml
crates/edgeup-lib/src/: installer.rs  lib.rs  tests.rs
crates/evm-tests/: Cargo.toml
crates/evm-tests/src/: lib.rs
crates/evm-tests/tests/: checked_elision.rs  counter.rs  erc20.rs  gas_bench.rs  gas_stats.rs  loop_extraction.rs  main.rs  o2_size_debug.rs  opt_efficiency.rs  opt_equivalence.rs  spec_compliance.rs  stress.rs  subroutine.rs  transient.rs
crates/evm-tests/tests/suites/: arrays.rs  checked_elision.rs  opt_equivalence.rs  spec_compliance.rs
crates/foundry-compilers-edge/: Cargo.toml
crates/foundry-compilers-edge/src/: compiler.rs  contract.rs  error.rs  input.rs  language.rs  lib.rs  parser.rs  settings.rs
crates/foundry-compilers-edge/tests/: integration.rs
crates/ir/: Cargo.toml  README.md
crates/ir/src/: ast_helpers.rs  cleanup.rs  costs.rs  instruction.rs  lib.rs  lower.rs  mem_region.rs  pretty.rs  program.rs  region_forward.rs  schedule.rs  schema.egg  schema.rs  sexp.rs  storage_hoist.rs  to_egglog.rs  u256_sort.rs  var_opt.rs
crates/ir/src/optimizations/: arithmetic.egg  checked_arithmetic.egg  const_prop.egg  cse.egg  dead_code.egg  inline.egg  memory.egg  mod.rs  peepholes.egg  range_analysis.egg  region_memory.egg  storage.egg  type_propagation.egg  u256_const_fold.egg
crates/ir/src/to_egglog/: calls.rs  composite.rs  control_flow.rs  dispatch.rs  expr.rs  function.rs  mod.rs  pattern.rs  storage.rs  types.rs
crates/lexer/: Cargo.toml  README.md
crates/lexer/etc/: erc20.edge  showcase.edge
crates/lexer/src/: core.rs  errors.rs  lexer.rs  lib.rs
crates/lexer/tests/: main.rs  operators.rs  primitives.rs  tests.rs
crates/lexer/tests/keywords/: type.rs
crates/lexer/tests/suites/: operators.rs  tests.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: diagnostics.rs  lib.rs
crates/parser/: Cargo.toml  README.md
crates/parser/src/: errors.rs  lib.rs  parser.rs
crates/parser/tests/: parser_tests.rs
crates/typeck/: Cargo.toml  README.md
crates/typeck/src/: abi.rs  checker.rs  error.rs  lib.rs
crates/typeck/tests/: abi.rs  const_eval.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: bytes.rs  lib.rs  source.rs  span.rs  time.rs  tokens.rs
crates/types/src/tokens/: keywords.rs  locations.rs  operators.rs  types.rs
docs/: layout.tsx  package-lock.json  package.json  vocs.config.ts
etc/: install.sh
examples/: README.md  counter.edge  erc20.edge  expressions.edge  loop_extraction.edge  optimizable.edge  stress_loops.edge  stress_storage.edge  stress_variables.edge  test_arrays.edge  test_builtins.edge  test_checked_arith.edge  test_checked_elision.edge  test_control_flow.edge  test_elision_simple.edge  test_enums2.edge  test_erc20.edge  test_events_heavy.edge  test_functions.edge  test_generics.edge  test_impl.edge  test_inline.edge  test_loop_storage.edge  test_merkle.edge  test_storage_heavy.edge  test_structs.edge  test_traits.edge  transient.edge
scripts/: gas-diff.py
solidity-bench/: .gas-snapshot  .gitignore  foundry.toml
std/: README.md  auth.edge  math.edge  ops.edge
(+243 files in other folders)
