[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.package]
name = "edge-rs"
description = "Edge Language Compiler Workspace"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["refcell"]
repository = "https://github.com/refcell/edge-rs"
homepage = "https://github.com/refcell/edge-rs"
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
anyhow = "1.0.79"
inquire = "0.6.2"
tracing = "0.1.40"
serde = "1.0.196"
serde_json = "1.0.113"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.0", features = ["derive"] }

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true
