[workspace]
members = ["bin/*", "crates/*"]
resolver = "2"

[workspace.package]
description = "Edge Language Compiler Workspace"
version = "0.1.15"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["refcell"]
repository = "https://github.com/refcell/edge-rs"
homepage = "https://github.com/refcell/edge-rs"
exclude = ["**/target", "benches/", "tests"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
redundant-clone = "warn"
clone-on-ref-ptr = "warn"
unnecessary-to-owned = "warn"
cloned-instead-of-copied = "warn"
flat-map-option = "warn"
implicit-clone = "warn"
or-fun-call = "warn"
wildcard-imports = "warn"
use-self = "warn"
option-if-let-else = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
single-char-pattern = "warn"
redundant-else = "warn"
match-same-arms = "warn"
undocumented-unsafe-blocks = "warn"
doc-markdown = "warn"
dbg-macro = "warn"
branches-sharing-code = "warn"
derive-partial-eq-without-eq = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
iter-with-drain = "warn"
needless-pass-by-ref-mut = "warn"
string-lit-as-bytes = "warn"

[workspace.dependencies]
edge-types = { path = "crates/types" }
edge-lexer = { path = "crates/lexer" }
edge-ast = { path = "crates/ast" }
edge-parser = { path = "crates/parser" }
edge-diagnostics = { path = "crates/diagnostics" }
edge-typeck = { path = "crates/typeck" }
edge-ir = { path = "crates/ir" }
edge-codegen = { path = "crates/codegen" }
edge-driver = { path = "crates/driver" }
anyhow = "1.0.79"
inquire = "0.6.2"
tracing = "0.1.40"
serde = "1.0.196"
serde_json = "1.0.113"
tracing-subscriber = "0.3.18"
clap = { version = "4.5.0", features = ["derive", "env"] }
thiserror = { version = "2.0", default-features = false }
dirs = "5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
egglog = { git = "https://github.com/egraphs-good/egglog", rev = "161a36f" }
indexmap = "2.0.0"
ruint = "1"
lazy_static = "1"
tiny-keccak = { version = "2.0", features = ["keccak"] }
alloy-primitives = { version = "1.5", default-features = false, features = ["serde"] }
revm = { version = "34.0", default-features = false, features = ["std"] }
criterion = { version = "0.5", features = ["html_reports"] }
derive_more = { version = "1", features = ["display"] }
ariadne = "0.6"
rstest = "0.23"

[profile.dev]
incremental = true
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"

[profile.ci]
inherits = "dev"
debug = false
incremental = false

[profile.bench]
debug = true
