[package]
name = "edge-bench"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
criterion = { workspace = true }
edge-lexer = { workspace = true }
edge-parser = { workspace = true }
edge-typeck = { workspace = true }
edge-driver = { workspace = true }

[[bench]]
name = "pipeline"
harness = false
