[package]
name = "edge-codegen"
description = "Edge Language EVM Bytecode Emitter"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
thiserror = { workspace = true }
indexmap = { workspace = true }

[lints]
workspace = true
