[package]
name = "edge-driver"
description = "Edge Language Compiler Driver"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
edge-types = { workspace = true }
edge-ast = { workspace = true }
edge-lexer = { workspace = true }
edge-parser = { workspace = true }
edge-diagnostics = { workspace = true }
edge-typeck = { workspace = true }
edge-ir = { workspace = true }
edge-codegen = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
tiny-keccak = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
edge-parser = { workspace = true }
edge-ir = { workspace = true }
edge-codegen = { workspace = true }

[lints]
workspace = true
