[package]
name = "edgeup-lib"
description = "Programmatic version resolution and management for the Edge toolchain"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
reqwest = { workspace = true }
