[package]
name = "edge-ir"
description = "Edge Language Egglog-based Intermediate Representation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
edge-types = { workspace = true }
edge-ast = { workspace = true }
edge-diagnostics = { workspace = true }
egglog = { workspace = true }
indexmap = { workspace = true }
lazy_static = { workspace = true }
ruint = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
edge-parser = { workspace = true }

[lints]
workspace = true
