[package]
name = "edge-typeck"
description = "Edge Language Type Checker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }

[dependencies]
edge-types = { workspace = true }
edge-ast = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true }
tiny-keccak = { workspace = true }
alloy-primitives = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
edge-driver = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
