[package]
name = "edge-types"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["refcell"]
readme = "README.md"
repository = "https://github.com/refcell/edge-rs/"
homepage = "https://github.com/refcell/edge-rs"
exclude = ["**/target", "benches/", "tests"]
description = "Common types used across the Edge Language compiler"
keywords = ["edge", "rust", "evm", "bytecode", "compiler"]

[dependencies]
anyhow = "1.0.79"
tracing = "0.1.40"
serde = { version = "1.0.196", features = [ "derive", "rc" ] }
serde_json = "1.0.113"
regex = "1"
uuid = { version = "1.7", features = ["v4"] }
cfg-if = "1"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
alloy-primitives = { workspace = true }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
js-sys = { version = "0.3" }
